changed ajax request url

--- a/index2.html
+++ b/index2.html
@@ -308,7 +308,7 @@ var auto_refresh = setInterval(
 function ()
 {
     jQuery.ajax({
-        url: 'http://localhost:8000/get_data2',
+        url: 'https://iotcms.herokuapp.com/get_data2',
         type: 'GET',
         data: zeta,
         dataType: 'html',
