add id for std_z for current and ideal

--- a/index2.html
+++ b/index2.html
@@ -255,7 +255,7 @@ Y-Axis
     <tr class="text-center">
       
       <td>Standard Deviation</td>
-      <td>3.2</td>
+      <td id="std_z">3.2</td>
   
     </tr>
   </tbody>
@@ -288,7 +288,7 @@ Y-Axis
     <tr class="text-center">
       
       <td>Standard Deviation</td>
-      <td >1.32</td>
+      <td id='std_z_i'>1.32</td>
   
     </tr>
   </tbody>
