added warning system

--- a/index2.html
+++ b/index2.html
@@ -365,7 +365,7 @@ function ()
 	}
 
 
-                if (xmax > 1.5) {
+                if (std_x > 1.5) {
    						document.getElementById("std_x").style.color= "#FF6347";  
 
 	} 
@@ -397,11 +397,11 @@ function ()
 
 
                 if (std_y > 0.8) {
-   						document.getElementById("std_z").style.color= "#FF6347";  
+   						document.getElementById("std_y").style.color= "#FF6347";  
 
 	} 
 	else{
-		document.getElementById("std_z").style.color= "#FFFFFF";
+		document.getElementById("std_y").style.color= "#FFFFFF";
 
 	}
 
