added warning system

--- a/index2.html
+++ b/index2.html
@@ -386,7 +386,7 @@ function ()
 
 	}
 
-	                if (xrms > 0.8) {
+	                if (yrms > 0.8) {
    						document.getElementById("y_rms").style.color= "#FF6347";  
 
 	} 
